# solana-program

./: Anchor.toml  README.md
programs/gamaedtech-program/: Cargo.toml
programs/gamaedtech-program/src/: lib.rs
programs/solana-program/: Cargo.toml
programs/solana-program/src/: lib.rs
tests/: solana-program.ts
